[package]
name = "tonic-grpc"
version = "0.1.0"
authors = ["drdr xp <drdr.xp@gmail.com>"]
edition = "2018"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "client"
path = "src/client.rs"

[[bin]]
name = "oneshot"
path = "src/oneshot.rs"

[dependencies]
tonic = "0.1"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
