[package]
name = "try-future"
version = "0.1.0"
authors = ["drdr xp <drdr.xp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tokio = { version = "0.2.0", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["full"] }
bytes = "0.5"
futures = "0.3.0"
